<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Whac A Mole</string>
    <string name="start_game">START</string>
    <string name="rank">Rank:</string>
    <string name="score">Score:</string>
    <string name="name">Name:</string>
    <string name="top_30_scores">Top 30 scores</string>
    <string name="play_again">Play again</string>
    <string name="add_name">Add name:</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="normal_mole">Normal mole, gain 5 poins</string>
    <string name="good_mole">Golden mole, gain 12 points</string>
    <string name="bad_mole">Purple mole, lose 9 points</string>
    <string name="action_settings">Settings</string>

</resources>