<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="300dp"
    android:layout_height="220dp"
    android:background="#ff078300"
    android:orientation="vertical" >
        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_margin="20dp"
            android:text="@string/add_name"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editText1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textView1"
            android:layout_margin="20dp"
            android:background="@drawable/edittext_background"
            android:ems="10"
            android:inputType="textPersonName"
            android:paddingBottom="7dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="7dp"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/editText1"
            android:layout_marginLeft="20dp"
            android:background="#5BBA5E"
            android:padding="7dp"
            android:textSize="20sp"
            android:text="@string/done" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/editText1"
            android:layout_below="@+id/editText1"
            android:background="#5BBA5E"
            android:padding="7dp"
            android:textSize="20sp"
            android:text="@string/cancel" />

</RelativeLayout>